# rope-mcp

./: .gitignore  IMPLEMENTATION_ROADMAP.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
src/rope_mcp/: __init__.py
src/rope_mcp/cli/: __init__.py
src/rope_mcp/core/: __init__.py
src/rope_mcp/core/tools/: __init__.py
src/rope_mcp/server/: __init__.py
src/rope_mcp/shared/: __init__.py
tests/: __init__.py
tests/test_server/: __init__.py
